# aws-icons-for-plantuml

./: .gitignore  .pylintrc  AWSSymbols.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
.kiro/specs/github-pages-icon-browser/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
examples/: Basic Usage.puml  Group - Auto Scaling.puml  Groups - Auto Scaling.puml  Groups - CodePipeline.puml  Groups - VPC.puml  Groups - all.puml  HelloWorld.puml  MarketplaceSaaS.puml  Raw Image Usage.puml  Raw Sprite Usage.puml  S3 Upload Workflow.puml  Sequence - Images.puml  Sequence - Simplified.puml  Sequence - Sprites.puml  Sequence - Technical.puml  Serverless API.puml  Test 1.puml  Two Modes - Simple View.puml  Two Modes - Technical View.puml  VPC.puml  upgrade.sh
examples/architecture-blog/: Figure 1.puml  Figure 2.puml  Figure 3.puml  Figure 4.puml  Figure 5(updated).puml  Figure 5.puml  README.md
examples/cognito-scenario/: 1-basic-diagram.puml  2-visual-updates.puml  3-aws-icons-and-colors.puml  README.md
examples/mermaid-js/: README.md  mermaid.html
examples/s3-upload-workflow/: .gitignore  README.md  S3 Upload Workflow - C4.puml  S3 Upload Workflow - mermaid.html  S3 Upload Workflow - sequence.puml  S3 Upload Workflow.puml  structurizr.sh  workspace.dsl
examples/theme-testing/: README.md  activity.puml  class.puml  colors.puml  deployment.puml  network.puml  port.puml  state.puml  swimlane.puml  usecase.puml
scripts/: AWSColorPalette.css  README.md  config-backup.yml  config-compare.yml  config.yml  config.yml.2021.09.17  config.yml.2022.07.31  config.yml.2023.01.31  config.yml.2023.10.23  config.yml.save  config.yml.save.yml  generate_site.py  http_server_cors.py  icon-builder.py  requirements.txt  test_upgrade.py  test_validate_config.py  upgrade.py  version.puml
scripts/awsicons/: icon.py
scripts/batik-1.13/: CHANGES  README
scripts/batik-1.16/: CHANGES  NOTICE  README
scripts/site_assets/: app.js  style.css
scripts/site_templates/: _example_card.html.j2  _icon_card.html.j2  index.html.j2
source/: AWSC4Integration.puml  AWSCommon.puml  AWSExperimental.puml  AWSGroups.puml  AWSRaw.puml  AWSSimplified.puml
tests/: conftest.py  test_infrastructure_validation.py
(+49 files in other folders)
